fix comment overlap with modal

--- a/app/assets/stylesheets/greeting/session_form.css
+++ b/app/assets/stylesheets/greeting/session_form.css
@@ -29,7 +29,7 @@
     width: 380px;
     margin-left: -190px;
     background: white;
-    z-index: 3;
+    z-index: 6;
     color: #ccc;
 }
 
