--- a/app/assets/stylesheets/user_track_index.css
+++ b/app/assets/stylesheets/user_track_index.css
@@ -153,7 +153,7 @@
 .progress-text {
   position: absolute;
   margin-top: -15px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .song-length {
@@ -161,7 +161,7 @@
   float: right;
   margin-top: -15px;
   margin-left: -10px;
-  z-index: 10;
+  z-index: 1;
 }
 
 .track-progress {
@@ -174,7 +174,7 @@
   background-color: rgba(250,250,250,.7);
   height: 35px;
   margin-top: -31px;
-  z-index: 15;
+  z-index: 2;
 }
 
 .track-comment-photobar {
@@ -183,7 +183,7 @@
   width: 100%;
   height: 15px;
   /* background-color: blue; */
-  z-index: 20;
+  z-index: 3;
 
 }
 
